--- a/index.css
+++ b/index.css
@@ -1,4 +1,51 @@
-    
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}    
     body {
     background-color: black;
     color: white;
@@ -9,23 +56,26 @@
     font-size: 32px;
 }
     nav {
-     position: fixed;   
-     text-decoration-color: white;
-     color: white; 
+     position: fixed;  
      display: block;
-     font-family: Calibri;
-     font-size: 24px;
-     letter-spacing: 1px;
+     text-decoration: none;
      left: 1000px;
      top: 10px;
      z-index: 999;
 }
+    p {
+     color: white; 
+     font-family: Calibri;
+     font-size: 24px;
+     letter-spacing: 1px;
+    }
     .row {
       overflow: auto;
       width: 100%; 
 }
     .bands-list {
       color: white;
+      text-decoration: none;
       font-family: Calibri;
       font-size: 72px;
       letter-spacing: 5px;
