--- a/index.css
+++ b/index.css
@@ -52,26 +52,26 @@ table {
 }
     span {
     text-decoration: none;
-    font-family: Calibri;
-    font-size: 24px;
+    font-family: 'Poiret One', cursive;
+    font-size: 18px;
 }
     nav {
      position: fixed;  
      display: block;
+     font-family: 'Playfair Display SC', serif;
      font-size: 24px;
      left: 950px;
      top: 20px;
      z-index: 999;
 }
     p { 
-     font-family: Calibri;
-     font-size: 24px;
+     font-family: 'Righteous', cursive;
+     font-size: 18px;
      letter-spacing: 1px;
     }
     a {
      color: white;
      text-decoration: none;
-     font-family: Calibri;
      letter-spacing: 1px;
     }
     .row {
@@ -81,10 +81,11 @@ table {
     li {
       color: white;
       text-decoration: none;
-      font-family: 'Comfortaa', cursive;
+      font-family: 'Comfortaa' ;
       font-size: 40px;
       letter-spacing: 3px;
       width: 54%;
       margin: 80px 0 50px 100px;
       padding-left: -1em; 
+      background-image: url(/imagesg/ico/favicon-32x32.png)
 }
