--- a/index.css
+++ b/index.css
@@ -87,5 +87,18 @@ table {
       width: 54%;
       margin: 80px 0 50px 100px;
       padding-left: -1em; 
-      background-image: url(/imagesg/ico/favicon-32x32.png)
+      opacity: 0.2;
 }
+    li:hover { 
+      opacity: 1; 
+      transition: 1.5s;      
+}
+    #arrow {
+        color: white;
+        font-size: 30px;
+        opacity: 0;
+    }
+    #arrow:hover {
+        opacity: 1;
+        transition: 1.5s;
+    }
