--- a/index.css
+++ b/index.css
@@ -90,8 +90,9 @@ table {
       opacity: 0.2;
 }
     li:hover { 
+      cursor: pointer;
       opacity: 1; 
-      transition: 1.5s;      
+      transition: 0.8s ease-in-out;      
 }
     #arrow {
         color: white;
@@ -99,6 +100,7 @@ table {
         opacity: 0;
     }
     #arrow:hover {
+        cursor: pointer;
         opacity: 1;
-        transition: 1.5s;
+        transition: 0.8s ease-in-out;
     }
