remove borders change some positions

--- a/css/index.css
+++ b/css/index.css
@@ -50,24 +50,27 @@ table {
     * {
     	max-width: 100%;
     	text-decoration: none;
-    	color: #F5F5F5;
+     	color: #F5F5F5;  
     }
     html {
-        background-color: black;
+        background-color: black;  
     }
     body {
     	max-width: 980px;
         min-width: 320px;
-    	border: 3px solid red;
+/*    	border: 3px solid red;  */
     	margin: 0 auto;
     }
     nav {
-        border: 3px solid lightblue;    
+/*        border: 3px solid lightblue;    */
         display: -webkit-flex;
         display: flex;
         -webkit-justify-content: flex-end;
         justify-content: flex-end;
     }
+/*---------------------------- drop menu ------------------------------------*/
+
+/*--------------------------------------------------------------------------*/
     .menu {
         position: fixed;
         top: 8px;
@@ -79,9 +82,9 @@ table {
     }
     .menu-button {
         opacity: 1;
-        padding: 5px;
+        padding: 5px 10px 5px;
         margin: 3px;
-        border: 3px solid black;
+/*        border: 3px solid black;  */
     }
     .menu-button:hover {
         opacity: 0.5;
@@ -98,15 +101,15 @@ table {
         display: -webkit-flex;
         flex-direction: ltr;
         -webkit-flex-direction: row;
-    	border: 3px solid blue;
+/*    	border: 3px solid blue;  */
     }
      .col1 {
      	float: left;
-    	border: 3px solid yellow;
+/*    	border: 3px solid yellow;  */
     	width:50%;
     } 
     .list {
-    	border: 3px solid orange;
+/*    	border: 3px solid orange;  */
     } 
     .list .number-list {
         text-decoration: none;
@@ -121,7 +124,7 @@ table {
     	opacity: 0.4;
     	width: 100%;
     	height:50%;
-    	border: 3px solid green;
+/*    	border: 3px solid green; */
     	padding: 10% 0 10% 0%;
         font-family: Comfortaa, serif;
         font-weight: bold;
@@ -160,36 +163,35 @@ table {
         top: 0;
         left: 50%;
         width: 50%;
-    	border: 3px solid pink;
+/*    	border: 3px solid pink;  */
     	height:100%;
     }
     li {
         position: inherit;
-    	border: 3px solid grey;
+/*    	border: 3px solid grey;  */
     	width:100%;
     }
-    .img-bands-about p {
-        bottom: 0;
+       .img-bands-about p {
+        position: fixed;
+        top: 82%;
         padding-left: 5%;
         padding-bottom: 5%;
         width: 490px;
-        position: fixed;
         font-family: 'EB Garamond', serif;
     	font-size: 22px;
         z-index: 5;
+/*         border: 3px solid grey;  */
     }
+
     
     .border-img {
         position: absolute;
         width: 100%;
         height: 800px;
-        border: 3px solid navy;
+/*        border: 3px solid navy;  */
     }
     
     img {
-        position: absolute;
-        display: block;
-        overflow: hidden;
-        z-index:0;
+        position: inherit;
         
     }
