--- a/css/index.css
+++ b/css/index.css
@@ -57,6 +57,7 @@ table {
     }
     body {
     	max-width: 980px;
+    	max-height: 600px;
         min-width: 320px;
 /*    	border: 3px solid red;  */
     	margin: 0 auto;
