--- a/css/oe.css
+++ b/css/oe.css
@@ -99,7 +99,7 @@ table {
         z-index: 1000;
         background: linear-gradient(to top,grey, black);
         background: rgba(43, 43, 43, 0.6);
-        border-radius: 0  0 8px 8px;
+        border-radius: 0  0 5px 5px;
 /*        border: 3px solid yellow;       */
     }
     
@@ -136,7 +136,7 @@ table {
         padding: 5px 0 10px 7px;
         margin-top: 15px;
         border: 2px rgba(43, 43, 43, 0.9);       
-        height: 120px;
+        height: 150px;
         width: auto;
      	color: #F5F5F5;
         border-radius: 5px;
@@ -329,7 +329,7 @@ table {
      min-height: 500px;
      background-color: #efefef;
      font-family: sans-serif;
-     font-size: 16px;
+     font-size: 14px;
      line-height: 1.5em;
      color: black;
      border-radius: 5px;
@@ -341,6 +341,14 @@ table {
      padding: 10px 18px;
      background-color: #f6f6f6;
      text-indent: 5%;
+     border-radius: 5px;
+     box-shadow: -7px 16px 51px -15px #8c8c8c;
+ }
+ 
+ #coments {
+     margin: 5px;
+     padding: 10px 18px;
+     background-color: #f6f6f6;
      border-radius: 5px;
      box-shadow: -7px 16px 51px -15px #8c8c8c;
  }
@@ -405,12 +413,12 @@ table {
  h2  {
      font-family: Comfortaa, serif;
      font-weight: bold;
-     font-size: 40px;
+     font-size: 25px;
      text-align: center;
  }
  
  h2 span {
-     font-size: 20px;
+     font-size: 15px;
      vertical-align: 4px;
  }
  
