--- a/css/oe.css
+++ b/css/oe.css
@@ -50,14 +50,12 @@ table {
     * {
     	max-width: 100%;
     	text-decoration: none;  
-/*     	border: 3px;*/
     }
     html {background-color: #323232;
     }
     body {
     	max-width: 980px;
         min-width: 320px;
-/*   	border: 3px solid red;      */
     	margin: 0 auto 50px auto;
     }
     
@@ -75,8 +73,7 @@ table {
         
     }
 /*----------------------------  menu ------------------------------------*/
-    nav {
-/*        border: 3px solid lightblue;       */
+    nav {      */
         width: 980px;
         height: 45px;
         top: 0;
@@ -87,7 +84,6 @@ table {
         height: 100px;
         margin-top: 60px;
      	color: #F5F5F5;
-/*        border: solid orange;       */
     }
     
      .menu {
@@ -100,7 +96,6 @@ table {
         background: linear-gradient(to top,grey, black);
         background: rgba(43, 43, 43, 0.6);
         border-radius: 0  0 5px 5px;
-/*        border: 3px solid yellow;       */
     }
     
     #left-menu-section {
@@ -109,7 +104,6 @@ table {
         font-family: 'Play', sans-serif;
         font-weight: bold;
         font-size: 105%;
-/*        border: solid green;       */
     }
 
 /*---------------------------- drop menu ------------------------------------*/
@@ -121,7 +115,6 @@ table {
         padding: 10px 10px 10px 7px;
         transition: all 0.7s cubic-bezier(0.42, 0, 0.57, 0.99);
         z-index: 1000;
-/*        border: 3px solid blue;       */
     }
     
     .main-title:focus ~ .dropdown-menu-section, .main-title:active ~ .dropdown-menu-section, 
@@ -166,7 +159,6 @@ table {
         width: auto;
      	color: #F5F5F5;
         transition: all 0.7s cubic-bezier(0.42, 0, 0.57, 0.99);
-/*        border: solid purple;       */
     }
     
     #on-top {
@@ -186,7 +178,6 @@ table {
         float: right;
         padding: 12px 0 12px 0;
         width: auto;
-/*        border: solid red;       */
     }
 
     .menu-button {
@@ -195,7 +186,6 @@ table {
         width: auto;
      	color: #F5F5F5;
         transition: all 0.7s cubic-bezier(0.42, 0, 0.57, 0.99);
-/*        border: 3px solid blue;       */
     }
     .menu-button:hover {
         opacity: 0.5;
@@ -321,7 +311,6 @@ table {
  
  
  .content-left {
-/*     border: solid pink;      */
      float: left;
      width: 71%;
      margin: 30px 0 0 0;
