--- a/css/about.css
+++ b/css/about.css
@@ -60,7 +60,6 @@ table {
         margin: 0 auto;
     }
  
-    }
     nav {
         display: -webkit-flex;
         display: flex;
@@ -74,9 +73,9 @@ table {
         left: 60%;
         font-family: Righteous;
         font-size: 130%;
-        z-index: 1;
-        
+        z-index: 1;  
     }
+    
     .menu-button {
         opacity: 1;
         padding: 5px 10px 5px;
@@ -85,15 +84,15 @@ table {
         transition: all 0.7s cubic-bezier(0.42, 0, 0.57, 0.99);
     }
     .menu-button:hover {
-        opacity: 0.5;
-        
+        opacity: 0.5;    
     }
     
    .black-box {
        margin: 100px auto;
        width: 100%;
        font-family: Righteous;
-       font-size: 6em;
+       font-size: 3.8em;
+       line-height: 1.1em;
        text-shadow: -2px -2px #000, 0 2px 0 #444;
        color: #222;
    }
