--- a/css/about.css
+++ b/css/about.css
@@ -52,7 +52,7 @@ table {
      	color: #202020;  
     }
     
-    html, body {
+    html, body, nav, .menu {
         display: block;
         background-color: #303130;
     	max-width: 980px;
@@ -68,9 +68,11 @@ table {
     }
 
     .menu {
+        margin: 0 auto;
+        width: 980px;
         position: fixed;
         top: 8px;
-        left: 60%;
+        right: 0%;
         font-family: Righteous;
         font-size: 130%;
         z-index: 1;  
@@ -89,7 +91,9 @@ table {
     }
     
    .black-box {
-       margin: 100px auto;
+       display: block;
+       margin: 100px 20px 100px 20px;
+       padding: 20px;
        width: 100%;
        font-family: Righteous;
        font-size: 3.8em;
