--- a/css/about.css
+++ b/css/about.css
@@ -101,3 +101,7 @@ table {
        text-shadow: -2px -2px #000, 0 2px 0 #444;
        color: #222;
    }
+   
+   .black-box p {
+       margin: 0 50px 0 0;
+   }
