--- a/css/about-small.css
+++ b/css/about-small.css
@@ -65,3 +65,16 @@
     .menu-points:hover {
         opacity: 0.5;
     }
+
+    .black-box {
+       position: absolute;
+       display: block;
+       margin: 10% 3% 10% 3%;
+       padding: 20px;
+       width: 100%;
+       font-family: Righteous;
+       font-size: 2.5em;
+       line-height: 1.1em;
+       text-shadow: -1px -1px #000, 0 1px 0 #444;
+       color: #222;
+   }
