responsive contacts, about

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -53,6 +53,7 @@ table {
     }
     
     html, body {
+        position: relative;
         display: block;
         background-color: #303130;
     	max-width: 980px;
