--- a/css/about-large.css
+++ b/css/about-large.css
@@ -28,12 +28,12 @@
    .black-box {
        position: absolute;
        display: block;
-       margin: 10% 3% 10% 3%;
-       padding: 20px;
-       width: 100%;
+       margin: 7% 0% 5% 0%;
+       padding: 0 0 0 7%;
+       width: 93%;
        font-family: Righteous;
-       font-size: 3.8em;
-       line-height: 1.1em;
-       text-shadow: -2px -2px #000, 0 2px 0 #444;
+       font-size: 3.5em;
+       line-height: 1.0em;
+       text-shadow: -1.8px -1.8px #000, 0 1.8px 0 #444;
        color: #222;
    }
