--- a/css/about-small.css
+++ b/css/about-small.css
@@ -69,12 +69,12 @@
     .black-box {
        position: absolute;
        display: block;
-       margin: 10% 3% 10% 3%;
-       padding: 20px;
-       width: 100%;
+       margin: 14% 0% 7% 0%;
+       padding: 0 0 0 7%;
+       width: 93%;
        font-family: Righteous;
-       font-size: 2.5em;
-       line-height: 1.1em;
+       font-size: 2.0em;
+       line-height: 0.9em;
        text-shadow: -1px -1px #000, 0 1px 0 #444;
        color: #222;
    }
