--- a/css/contacts-large.css
+++ b/css/contacts-large.css
@@ -25,12 +25,15 @@
     }
         
    .black-box {
-       margin: 85px auto;
-       width: 100%;
+       position: absolute;
+       display: block;
+       margin: 7% 0% 7% 0%;
+       padding: 0 0 0 7%;
+       width: 93%;
        font-family: Righteous;
-       font-size: 305%;
-       text-shadow: -2px -2px #000, 0 2px 0 #444;
-       line-height: 1.3em;
+       font-size: 3.5em;
+       line-height: 1.0em;
+       text-shadow: -1.8px -1.8px #000, 0 1.8px 0 #444;
        text-align: center;
        color: #222;
    }
