--- a/css/contacts-small.css
+++ b/css/contacts-small.css
@@ -10,7 +10,6 @@
         font-size: 130%;
         z-index: 1;  
     }
-/* ----------------------------------------------*/
 
     .main-title {
         opacity: 1;
@@ -20,7 +19,7 @@
      	color: #F5F5F5;
         padding: 10px 15px 0px 15px;
         border-radius: 5px;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.4s ease-in-out;
         z-index: 1000;
         background: linear-gradient(to top,grey, black);
         background: rgba(43, 43, 43, 0.6);
@@ -30,7 +29,8 @@
         opacity: 0.5;
     }
     
-    .main-title:focus ~ .dropdown-menu-section, .main-title:active ~ .dropdown-menu-section, 
+    .main-title:focus ~ .dropdown-menu-section, 
+    .main-title:active ~ .dropdown-menu-section, 
     .dropdown-menu-section:hover { 
         display: block; 
     } 
@@ -49,11 +49,10 @@
         background: linear-gradient(to top,grey, black);
         background: rgba(43, 43, 43, 0.6);
         z-index: 1000;
-  
     }
     
     .menu-points    {
-        padding: 10px 50px 10px 3px;
+        padding: 10px 10px 10px 3px;
         width: auto;
      	color: #F5F5F5;
         line-height:30px;
@@ -68,9 +67,8 @@
 
    .black-box {
        position: absolute;
-       margin:10% 3% 2% 3%;
-       padding: 3%;
-       width: 88%;
+       padding: 14% 3% 7% 5%;
+       width: 92%;
        font-family: Righteous;
        font-size: 2.0em;
        line-height: 0.9em;
