--- a/css/about-large.css
+++ b/css/about-large.css
@@ -9,10 +9,10 @@
     
     .menu-button {
         opacity: 1;
-        padding: 5px 10px 5px;
+        padding: 5px 10px 5px 0;
         margin: 3px;
         color: #F5F5F5;
-        transition: all 0.5s ease-in-out;
+        transition: all 0.4s ease-in-out;
     }
     
     .menu-button:hover {
@@ -24,13 +24,10 @@
         display: none;
     }
     
-    
    .black-box {
        position: absolute;
-       display: block;
-       margin: 7% 0% 5% 0%;
-       padding: 0 0 0 7%;
-       width: 93%;
+       padding: 7% 3% 5% 5%;
+       width: 92%;
        font-family: Righteous;
        font-size: 3.5em;
        line-height: 1.0em;
