--- a/css/about.css
+++ b/css/about.css
@@ -46,7 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-/* -------------- Start -------------------------------- */
+/*/* -------------- Start --------------- */
     * {
     	text-decoration: none;
      	color: #202020;  
