some changes in main window to responsive

--- a/css/contacts-small.css
+++ b/css/contacts-small.css
@@ -68,7 +68,7 @@
    .black-box {
        position: absolute;
        padding: 14% 3% 7% 5%;
-       width: 92%;
+       width: auto;
        font-family: Righteous;
        font-size: 2.0em;
        line-height: 0.9em;
