--- a/css/index.css
+++ b/css/index.css
@@ -52,57 +52,26 @@ table {
     	text-decoration: none;
      	color: #F5F5F5;  
     }
+    
     html {
         background-color: black;  
     }
+    
     body {
     	max-width: 980px;
         min-width: 320px;
     	margin: 0 auto;
     }
+    
     nav {
         display: -webkit-flex;
         display: flex;
         -webkit-justify-content: flex-end;
         justify-content: flex-end;
     }
-/*---------------------------- drop menu ------------------------------------*/
 
-    .menu {
-        position: fixed;
-        top: 5px;
-        left: 60%;
-        font-family: Righteous;
-        font-size: 130%;
-        z-index: 1;
-        
-    }
-    .menu-button {
-        opacity: 1;
-        padding: 5px 10px 5px;
-        margin: 3px;
-        transition: all 0.7s cubic-bezier(0.42, 0, 0.57, 0.99);
-    }
-    .menu-button:hover {
-        opacity: 0.5;
-        
-    }
-    
-    
 /* -------------- Section left (list bands) -------------------------------- */
    
-    
-    .row {
-        display: flex;
-        display: -webkit-flex;
-        flex-direction: ltr;
-        -webkit-flex-direction: row;
-    }
-    
-     .col1 {
-     	float: left;
-    	width:50%;
-    } 
     
     .list .number-list {
         text-decoration: none;
@@ -132,154 +101,13 @@ table {
     }
     .arrow  {
     	opacity: 0;
-    	vertical-align: 4px;
-    	font-size: 50%;
+    	vertical-align: 1.5px;
+    	font-size: 0.6em;
     	transition: all 2s cubic-bezier(0.42, 0, 0.57, 0.99);
     }
     .col1 li:hover .arrow  {
     	opacity: 1;
     }
     
-/*---------------------------- Transition immage when hover items list  ---------------*/    
-    
-    #oe-img  {
-        position:absolute;
-        z-index:4;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	opacity: 0;
-    }
-    #oe-about  {
-        position:absolute;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 22px;
-    	text-shadow: 2px 1px 9px  black;
-    	color: aliceblue;
-    	opacity: 0;
-    }
-
-    #skrjabin-img  {
-        position:absolute;
-        z-index:4;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	opacity: 0;
-    }
-    #skrjabin-about  {
-        color: #637273;
-        position:absolute;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 22px;
-    	text-shadow: 2px 1px 9px  black;
-    	color: aliceblue;
-    	opacity: 0;
-    }
-
-    #tartak-img  {
-        position:absolute;
-        z-index:4;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	opacity: 0;
-    }
-    #tartak-about  {
-        position:absolute;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 22px;
-    	text-shadow: 2px 1px 9px  black;
-    	color: aliceblue;
-    	opacity: 0;
-    }
-    
-    #skaj-img  {
-        position:absolute;
-        z-index:4;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	opacity: 0;
-    }
-    
-    #skaj-about  {
-        position:absolute;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 22px;
-    	text-shadow: 2px 1px 9px  black;
-    	color: aliceblue;
-    	opacity: 0;
-    }
-    
-    #bumbox-img  {
-        position:absolute;
-        z-index:4;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	opacity: 0;
-    }
-    
-    #bumbox-about  {
-        position:absolute;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 22px;
-    	text-shadow: 2px 1px 9px  black; 
-    	color: aliceblue;
-    	opacity: 0;
-    }
-
-    #tnmk-img  {
-        position:absolute;
-        z-index:4;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	opacity: 0;
-    }
-    
-    #tnmk-about  {
-        position:absolute;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 22px;
-    	text-shadow: 2px 1px 9px  black; 
-    	color: aliceblue;
-    	opacity: 0;
-    }
-    
-    #pt-img  {
-        position:absolute;
-        z-index:4;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	opacity: 0;
-    }
-    
-    #pt-about  {
-        position:absolute;
-        transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 22px;
-    	text-shadow: 2px 1px 9px  black; 
-    	color: aliceblue;
-    	opacity: 0;
-    }
-    
-/* -------------- Section right (foto with discription) -------------------------------- */
    
-    .col2 {
-        position: fixed;
-        top: 0;
-        left: 50%;
-        width: 50%;
-    	height:100%;
-    }
-    
-    .col2 li {
-        position: inherit;
-    	width:100%;
-    }
-    
-       .img-bands-about p {
-        top: 82%;
-        padding-left: 5%;
-        padding-bottom: 5%;
-        width: 490px;
-        font-family: 'EB Garamond', serif;
-        z-index: 5;
-    }
-
-    .border-img {
-        position: absolute;
-        width: 100%;
-        height: 800px;
-    }
-    
 
