some changes to responsive main page

--- a/css/index-small.css
+++ b/css/index-small.css
@@ -78,6 +78,10 @@
    ul {
        text-align: center;
    }
+   
+   #pt a {
+       justify-content: center;
+   }
     
 /* -------------- Section right (foto with discription) -------------------------------- */
    
