--- a/css/index-large.css
+++ b/css/index-large.css
@@ -38,11 +38,30 @@
      	float: left;
     	width:50%;
     }  
+    
+    .col1 li:hover  {
+    	opacity: 1;
+    	transform: translate(3%,0);
+    }
+    
+    
+  .col1 li:hover .arrow {
+        transform: translateX(15px);
+    	opacity: 1;
+    }
+    
+    .col1 li:hover #arrow-pt  {
+        transform: translateX(15px);
+    	opacity: 1;
+    }
+    
 /*---------------------------- Transition immage when hover items list  ---------------*/    
     
     #oe-img, #skrjabin-img, #tartak-img, #skaj-img, 
     #bumbox-img, #tnmk-img, #pt-img {
         position:absolute;
+        width: 100%;
+    	height: auto;
         z-index:4;
         transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
     	opacity: 0;
@@ -51,7 +70,8 @@
     #bumbox-about, #tnmk-about, #pt-about {
         position:absolute;
         transition: all 1s cubic-bezier(0.42, 0, 0.57, 0.99);
-    	font-size: 20px;
+        font-size: 3.5vh;
+        overflow: hidden;
     	text-shadow: 2px 1px 9px  black;
     	color: aliceblue;
     	opacity: 0;
@@ -64,19 +84,17 @@
         top: 0;
         left: 50%;
         width: 50%;
-    	height:100%;
+    	height: 100%;
+    	overflow: hidden;
     }
     
-    .col2 li {
-        position: inherit;
-    	width:100%;
-    }
     
        .img-bands-about p {
-        top: 75%;
-        padding-left: 5%;
-        padding-bottom: 5%;
-        width: 490px;
+        position: absolute;
+        top: 80%;
+        padding: 0 5% 5% 5%;
+        width: 92%;
+    	height: auto;
         font-family: 'EB Garamond', serif;
         z-index: 5;
     }
@@ -85,5 +103,11 @@
         position: absolute;
         width: 100%;
         height: 800px;
+    }
+    
+    #background-img {
+        position:absolute;
+        width: 100%;
+    	height: auto;
     }
     
