--- a/css/index-small.css
+++ b/css/index-small.css
@@ -82,6 +82,16 @@
    #pt a {
        justify-content: center;
    }
+   
+  .col1 li:hover .arrow {
+      transform: translateX(15px);
+    	opacity: 1;
+    }
+    
+  .col1 li:hover #arrow-pt  {
+        transform: translateX(15px);
+    	opacity: 1;
+    }
     
 /* -------------- Section right (foto with discription) -------------------------------- */
    
