--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,7 @@ table {
         opacity: 1;
     }
     .col1 li {
+        position: relative;
     	opacity: 0.4;
     	width: 100%;
     	height:50%;
@@ -96,14 +97,15 @@ table {
     
     .col1 li:hover  {
     	opacity: 1;
-    	transform: translate(3%,0);
-    	 
     }
+    
     .arrow {
+        position: absolute;
     	opacity: 0;
     	vertical-align: 1.5px;
     	font-size: 0.6em;
     	transition: all 2s cubic-bezier(0.42, 0, 0.57, 0.99);
+    	padding-top: 0.55em;
     }
     
     #arrow-pt {
@@ -111,15 +113,7 @@ table {
     	vertical-align: 1.5px;
     	font-size: 0.6em;
     	transition: all 2s cubic-bezier(0.42, 0, 0.57, 0.99);
-    }
-    
-    .col1 li:hover .arrow {
-    	opacity: 1;
-    }
-    
-    
-    .col1 li:hover #arrow-pt  {
-    	opacity: 1;
+        padding-top: 0.55em;
     }
     
     #pt a {
@@ -130,8 +124,3 @@ table {
     #pt-07 {
         padding-top: 0.8em;
     }
-    
-   #arrow-pt {
-        padding-top: 0.5em;
-    }
-
