some changes to responsive main page images

--- a/css/index-large.css
+++ b/css/index-large.css
@@ -5,7 +5,8 @@
         top: 5px;
         left: 55%;
         font-family: Righteous;
-        font-size: 130%;
+        font-size: 3vh;
+        overflow: hidden;
         z-index: 1;
         
     }
@@ -92,8 +93,8 @@
        .img-bands-about p {
         position: absolute;
         top: 80%;
-        padding: 0 5% 5% 5%;
-        width: 92%;
+        padding: 0 0 5% 5%;
+        width: 87%;
     	height: auto;
         font-family: 'EB Garamond', serif;
         z-index: 5;
