change main large size window

--- a/css/index-large.css
+++ b/css/index-large.css
@@ -3,7 +3,7 @@
     .menu {
         position: fixed;
         top: 5px;
-        left: 55%;
+        left: 75.7%;
         font-family: Righteous;
         font-size: 3vh;
         overflow: hidden;
@@ -12,8 +12,8 @@
     }
     .menu-button {
         opacity: 1;
-        padding: 5px 10px 5px;
-        margin: 3px;
+        padding: 1vh 1.5vh 1vh;
+        margin: 0vh;
         transition: all 0.7s cubic-bezier(0.42, 0, 0.57, 0.99);
     }
     .menu-button:hover {
@@ -47,12 +47,12 @@
     
     
   .col1 li:hover .arrow {
-        transform: translateX(15px);
+        transform: translateX(25px);
     	opacity: 1;
     }
     
     .col1 li:hover #arrow-pt  {
-        transform: translateX(15px);
+        transform: translateX(25px);
     	opacity: 1;
     }
     
@@ -77,6 +77,7 @@
     	color: aliceblue;
     	opacity: 0;
     }
+    
 
 /* -------------- Section right (foto with discription) -------------------------------- */
    
@@ -90,7 +91,7 @@
     }
     
     
-       .img-bands-about p {
+    .img-bands-about p {
         position: absolute;
         top: 80%;
         padding: 0 0 5% 5%;
@@ -110,5 +111,48 @@
         position:absolute;
         width: 100%;
     	height: auto;
+        webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
+        transition: 1.5s ease-in-out;
     }
+    
+    #o-about {
+        position: fixed;
+        top: 80%;
+        left: 48%;
+        padding: 4vh;
+        font-size: 4.0vh;
+        font-family: Comfortaa, serif;
+        font-weight: bold;
+        overflow: hidden;
+    	text-shadow: 2px 1px 9px  black;
+    	color: aliceblue;
+    	transition: all 1s ease-in-out;
+    	opacity: 0.7;
+    	z-index: -99;
+    }
+    
+    #about-box {
+        height: 6vh;
+        padding: 2.0vh 3vh 2.5vh 3vh;
+        margin: 5vh auto;
+        border: .7vh solid aliceblue;
+        border-radius: 3.7vh;
+    	opacity: 0.8;
+    }
+    
+    
+    video { 
+        top: 0%;
+        left: 0%;
+        position:absolute;
+        min-width: 190%;
+        height: auto;
+        z-index: -100;
+        transform: translateX(-15%);
+        background: url('images/love-ukrainian.jpg') no-repeat;
+        background-size: cover;
+        transition: 1s opacity;
+    }
+    
     
