change main large size window bread crumps

--- a/css/index-large.css
+++ b/css/index-large.css
@@ -143,6 +143,7 @@
         border: 0.8vh solid aliceblue;
         border-radius: 3.7vh;
     	opacity: 0.8;
+        background: rgba(0,0,0,0.9);
     }
     
     
